# pedigree-interpreter

./: .gitignore  LICENSE  README.md  pedigree-interpreter.py  pyproject.toml
src/: pedigree-interpreter.py
src/PedInterp/: PedInterp.py  __init__.py
