[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pedigree_interpreter"
version = "0.0.1"
authors = [
    { name="Nick Taylor", email="taylorngt@cox.net" },
]
description = "Image interpreter for clinical pedigrees for conversion to PED file formatting"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/taylorngt/pedigree-interpreter"
Issues = "https://github.com/taylorngt/pedigree-interpreter/issues"