[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pedigree-interpreter"
dynamic = ["version"]
authors = [
    { name="Nick Taylor", email="taylorngt@cox.net" },
]
description = "Image interpreter for clinical pedigrees for conversion to PED file formatting"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "pytesseract>=0.3.10",
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "pandas>=1.3.0,<3.0.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_version.py"

[project.urls]
Homepage = "https://github.com/taylorngt/pedigree-interpreter"
Issues = "https://github.com/taylorngt/pedigree-interpreter/issues"